# webm-iterable

./: Cargo.toml  LICENSE  README.md
.github/workflows/: github-pr-checks.yaml
media/: audiosample.webm
src/: errors.rs  lib.rs
src/matroska_spec/: block.rs  mod.rs  simple_block.rs
src/matroska_spec/blocks/: block.rs  block_utils.rs  mod.rs  simple_block.rs
