[package]
name = "webm-iterable"
version = "0.4.0"
authors = ["Austin Blake <austinl3roy@gmail.com>"]
edition = "2018"
description = "This crate extends the ebml-iterable library to provide an iterator over webm data.  It provides a Matroska specification implementing the required traits to read webm files."
readme = "README.md"
license = "MIT"
keywords = ["webm", "encoding", "parser", "serialization", "matroska"]
categories = ["parsing", "data-structures", "encoding", "multimedia::encoding"]
homepage = "https://github.com/austinleroy/webm-iterable"
repository = "https://github.com/austinleroy/webm-iterable"
exclude = [
    "media/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ebml-iterable = { version = "=0.4.0", path = "../ebml-iterable", features = ["derive-spec"] }

[dev-dependencies]
serde = { version = "1.0.137", features = ["derive"] }
serde-xml-rs = "0.5.1"
futures = "0.3"
hyper = { version = "0.14", features = ["full"]  }
hyper-tls = "0.5.0"
tokio = { version = "1.19", features = ["full"]  }